test/fixtures/fail/unterminated_macro.l4gs.g
; Missing `end macro`.

        macro foo
                db 0
